# CPPM

01/02/: task2.sln
01/02/task2/: task2.cpp  task2.vcxproj
01/02/task2ver2/: task2ver2.sln
01/02/task2ver2/task2ver2/: task2ver2.cpp  task2ver2.vcxproj
01/task1/: task1.sln
01/task1/task1/: task1.cpp  task1.vcxproj
02/01/task1/: task1.sln
02/01/task1/task1/: task1.cpp  task1.vcxproj
02/02/task2/: task2.sln
02/02/task2/task2/: task2.cpp  task2.vcxproj
03/01/task1/: task1.sln
03/01/task1/task1/: SmartArray.cpp  SmartArray.h  task1.cpp  task1.vcxproj
03/02/task2/: task2.sln
03/02/task2/task2/: SmartArray.cpp  SmartArray.h  task2.vcxproj
04/01/task1/: CMakeLists.txt  task1.cpp
04/01/task1/task1/: CMakeLists.txt  task1.cpp
04/02/task2/: CMakeLists.txt  task2.cpp
04/02/task2/task2/: CMakeLists.txt  task2.cpp
05/01/task1/: task1.sln
05/01/task1/task1/: task1.cpp
05/02/task2/: task2.sln
05/02/task2/task2/: Header.hpp  task2.cpp
05/03/task3/: task3.sln
05/03/task3/task3/: Functor.cpp  Functor.h  task3.cpp
07/01/task1/: task1.sln
07/01/task1/task1/: task1.cpp  task1.vcxproj
07/02/: main.cpp
08/01/task1/: task1.sln
08/01/task1/task1/: task1.cpp  task1.vcxproj
08/02/task2/: task2.sln
08/02/task2/task2/: task2.cpp  task2.vcxproj
10/01/task1/: task1.sln
10/01/task1/task1/: task1.cpp  task1.vcxproj
10/02/task2/: task2.sln
11/01/task1/: task1.sln
11/02/task2/: task2.sln
ini pars/: CMakeLists.txt  main.cpp  test2.ini
ini pars/Parser/: Parser.h
ini pars/SecondFunction/: SecondaryFunction.cpp  SecondaryFunction.h
(+5 files in other folders)
